--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-tensorflow
+gradio==4.19.2
 pandas
 numpy
-streamlit
-plotly
-folium
-requests
-earthengine-api
+joblib
+scikit-learn==1.3.2
+xgboost==3.1.2
+catboost==1.2.8
+lightgbm==4.6.0
